# investing-test-module

./: .gitignore  INTEGRATION.md  METHODOLOGY.md  PLAN_B.md  README.md  ROADMAP.md  STATUS.md  pyproject.toml  requirements.txt
TRIALS/: INSTR-HOLD-HORIZON.md  TEMPLATE.md  TRIAL-BRAIN-000-baseline.md  TRIAL-BRAIN-001-baseline-clean.md  TRIAL-BRAIN-002-crsp-holdband.md  TRIAL-BRAIN-003-opportunistic-insider.md  TRIAL-BRAIN-004-pead-sue.md  TRIAL-BRAIN-005-revisions.md  TRIAL-BRAIN-006-fda-approval-drift.md  TRIAL-BRAIN-007-fusion.md  TRIAL-BRAIN-010-conclow-confirm.md  TRIAL-THEME-SUPPLY-supplier-baskets.md  registry.jsonl
aegis_brain/: __init__.py  config.py  export.py
docs/: AUDIT_2026-07-21.md  SESSION_2026-07-19.md  SESSION_2026-07-20.md  SESSION_PROMPT_NEXT.md  STRATEGY_FACTORY.md
ledger/: forward_calls.jsonl
scripts/: build_crsp_panel.py  build_data_dictionary.py  build_data_preview.py  build_fda_crosswalk.py  build_insider_panel.py  build_panel_cache.py  download_insider.py  export_routine_history.py  export_smq_book.py  fetch_fundq.py  fetch_wrds_all.py  fetch_wrds_batch3.py  fetch_wrds_batch3b.py  fetch_wrds_batch4.py  fetch_wrds_batch4b.py  harvest_fda_events.py  ledger_register_v0.py  ledger_score.py  run_confirm_conclow.py  run_confirm_gpsmall.py  run_factory_batch1.py  run_factory_batch2.py  run_factory_batch3a.py  run_factory_batch3b.py  run_factory_batch5.py  run_factory_batch6.py  run_factory_batch7.py  run_instr_hold_horizon.py  run_robust_gpsmall_ext.py  run_theme_supply.py  run_trial_000.py  run_trial_001.py  run_trial_002.py  run_trial_003.py  (+7 more)
(+64 files in other folders)
